YSF-30849  【小程序sdk】一触即达模板样式各端目前都存在不一致，请确认下标准 YSF-30883  【小程序sdk】抽屉列表数据展示和app端不一致

--- a/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
@@ -1,3 +1,5 @@
+@import '../../../../styles/function.less';
+@import '../../../../styles/common.less';
 .m-bubble-node {
   color: #333;
 }
@@ -42,23 +44,24 @@
 }
 .u-line {
   position: absolute;
-  left: -21px;
+  left: -20px;
   top: 36px;
-  width: 2px;
+  width: 1px;
   height: 100%;
   background: #E1E3E6;
 }
 .z-active {
+  color: #337EFF;
   .u-dot {
     background: #337EFF;              
   }
 }
 .u-action {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 0;
+  box-sizing: border-box;
+  padding: 10px 20px;
   font-size: 14px;
   color: #337EFF;
+  text-align: center;
   border-top: 1px solid #EDEDED;
+  .fn_ellipsis();
 }
