--- a/src/plugin/components/Message/im-bot/TplOrderStatus/index.less
+++ b/src/plugin/components/Message/im-bot/TplOrderStatus/index.less
@@ -25,6 +25,7 @@
   justify-content: center;
   width: 221px;
   height: 32px;
+  border-radius: 4px;
   margin: 0 auto;
   margin-bottom: 12px;
   font-size: 14px;
