--- a/src/plugin/components/Message/im-bot/TplOrderLogistic/index.less
+++ b/src/plugin/components/Message/im-bot/TplOrderLogistic/index.less
@@ -40,18 +40,20 @@
 
 .u-dot {
   position: absolute;
-  left: -24px;
+  left: -20px;
+  transform: translateX(-50%);
   top: 32px;
-  width: 8px;
-  height: 8px;
-  border-radius: 8px;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
   background: #E1E3E6;
 }
 .u-line {
   position: absolute;
   left: -20px;
+  transform: translateX(-50%);
   top: 36px;
-  width: 1px;
+  width: 2px;
   height: 100%;
   background: #E1E3E6;
 }
