YSF-30849  【小程序sdk】一触即达模板样式各端目前都存在不一致，请确认下标准

--- a/src/plugin/components/Message/im-bot/TplActionList/index.less
+++ b/src/plugin/components/Message/im-bot/TplActionList/index.less
@@ -26,6 +26,7 @@
   font-size: 14px;
   color: #337EFF;
   border: 1px solid #337EFF;
+  border-radius: 4px;
   .fn_ellipsis();
   &:nth-last-of-type(1) {
     margin-bottom: 0;
