YSF-30953  【小程序sdk】气泡列表系统和气泡节点系统无数据返回格式优化

--- a/src/plugin/components/Message/im-bot/TplBubbleList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleList/index.less
@@ -12,3 +12,12 @@
   font-size: 14px;
   color: #337EFF;
 }
+
+.u-empty {
+  border-top: 1px solid #e6e6e6;
+  width: 200px;
+  padding: 20px 12px;
+  font-size: 14px;
+  color: #ccc;
+  text-align: center;
+}
