--- a/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
@@ -65,3 +65,10 @@
   border-top: 1px solid #EDEDED;
   .fn_ellipsis();
 }
+.u-empty {
+  width: 200px;
+  padding: 30px 0;
+  font-size: 14px;
+  color: #ccc;
+  text-align: center;
+}
