YSF-30849  【小程序sdk】一触即达模板样式各端目前都存在不一致，请确认下标准

--- a/src/plugin/components/Message/im-bot/TplBubbleList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleList/index.less
@@ -1,5 +1,11 @@
+@import '../../../../styles/function.less';
 .u-label {
   padding: 12px;
+}
+.u-title {
+  padding: 12px 12px 0 12px;
+  font-size: 12px;
+  .fn_line_clamp(2);
 }
 .u-bubble-list {
   border-top: 1px solid #e6e6e6;
