YSF-30963  【小程序sdk】气泡列表，选择商品后，之前的列表数据需要消失不展示

--- a/src/plugin/components/Message/im-bot/TplBubbleList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleList/index.less
@@ -1,6 +1,7 @@
 @import '../../../../styles/function.less';
 .u-label {
   padding: 12px;
+  .fn_line_clamp(2);
 }
 .u-title {
   padding: 12px 12px 0 12px;
