--- a/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
@@ -7,6 +7,7 @@
   padding: 12px 12px 14px 12px;
   font-size: 16px;
   border-bottom: 1px solid #EDEDED;
+  .fn_line_clamp(2);
 }
 .u-title {
   padding: 12px 12px 0 12px;
