feat: 增加气泡列表，抽屉列表数据重置逻辑，修复部分机型点击联想抖动问题，修复加载中显示不全问题

--- a/src/plugin/components/BotDrawerList/index.less
+++ b/src/plugin/components/BotDrawerList/index.less
@@ -41,11 +41,10 @@
     }
   }
   .u-swiper {
-    height: 400px;
+    // height: 400px;
+    height: calc(60vh - 40px);
   }
-  .u-list {
-    height: 400px;
-  }
+
   .u-item {
     height: 100px;
     border-bottom: 1px solid #ccc;
