--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -15,7 +15,7 @@
     left: 0;
     bottom: 0;
     box-sizing: border-box;
-    transition: bottom 300ms cubic-bezier(0.36, 0.66, 0.04, 1) 100ms;
+    transition: bottom 200ms cubic-bezier(0.36, 0.66, 0.04, 1);
   }
 }
 
