feat: 修复英文未截断问题

--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -52,6 +52,7 @@
     padding-left: 12px;
     margin-bottom: 6px;
     color: #1069d6;
+    word-break: break-all;
   }
   .u-dot {
     position: absolute;
