--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -26,7 +26,11 @@
   padding-top: 8px;
   white-space: nowrap;
   background-color: #F6F6F6;
-
+  ::-webkit-scrollbar{
+    width: 0;
+    height: 0;
+    color: transparent;
+  }
   &-item {
     display: inline-block;
     padding: 4px 10px;
@@ -37,7 +41,16 @@
     border: 1.5px solid #e1e3e6;
     background-color: #fff;
     border-radius: 14px;
+    transform: translateX(100px);
+    opacity: 0;
+    animation:mymove 1s cubic-bezier(0.36, 0.66, 0.04, 1) forwards;
   }
+  @keyframes mymove
+  {
+    from {transform: translateX(100px);opacity: 0;}
+    to {transform: translateX(0px);opacity: 1;}
+  }
+
 }
 
 .z-bot-disable {
