--- a/src/plugin/components/ChatBox/u-voice/index.less
+++ b/src/plugin/components/ChatBox/u-voice/index.less
@@ -1,5 +1,5 @@
 
-button {
+.u-voice-input {
   background-color: #fff;
   border: none;
   padding: 0;
@@ -7,7 +7,7 @@ button {
   line-height: 1;
 }
 
-button::after {
+.u-voice-input::after {
   border: none;
 }
 
