feat: 【智能化】在人工会话中禁点机器人会话按钮

--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -63,6 +63,12 @@
     border-radius: 6px;
     background-color: #1069d6;
   }
+  .z-disabled.u-qaitem {
+    color: #999999;
+  }
+  .z-disabled.u-dot {
+    background: #999999;
+  }
   .u-action {
     position: absolute;
     right: 0;
