补上自定义分组的功能和默认改成线上的配置

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -5,3 +5,17 @@
   margin-top: 30px;
   border: 1px solid #ccc;
 }
+.m-input-item {
+  display: flex;
+  padding: 0px 8px;
+  background-color: #eeeeee;
+  align-items: center;
+}
+
+.m-input-item_input {
+  flex: 1;
+}
+
+.m-input-item_label {
+  padding: 15px 5px;
+}
