--- a/src/plugin/components/Message/im-file/index.less
+++ b/src/plugin/components/Message/im-file/index.less
@@ -1,4 +1,13 @@
 @prefix: m-file;
+// 多行省略 ellipsis
+.fn_line_clamp(@line: 2) {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: @line;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
 
 .@{prefix} {
   display: flex;
@@ -33,6 +42,23 @@
     flex-direction: column;
     justify-content: space-between;
     width: 150px;
+    height: 61px;
+    padding-right: 10px;
+  }
+  
+  .u-left-top {
+    font-size: 15px;
+    .fn_line_clamp(2);
+  }
+
+  .u-size {
+    font-size: 12px;
+    color: #999;
+  }
+
+  .u-status {
+    font-size: 12px;
+    color: #999;
   }
 
   .u-left-bottom {
