--- a/src/plugin/components/ParserRichText/Parser/trees/trees.wxml
+++ b/src/plugin/components/ParserRichText/Parser/trees/trees.wxml
@@ -44,7 +44,7 @@
     <rich-text wx:else class="{{item.name}}" style="{{cssHandler.getStyle(item.attrs.style,'block') + ';word-break:break-all;'}}" nodes="{{cssHandler.setStyle(item)}}" />
   </block>
   <!--链接-->
-  <navigator wx:elif="{{item.name=='a'}}" url="{{item.attrs.href}}" style="{{item.attrs.style}}" data-href='{{item.attrs.href}}' hover-class="navigator-hover" hover-start-time="25" hover-stay-time="300" bindtap="tapEvent">
+  <navigator wx:elif="{{item.name=='a'}}" url="{{item.attrs.href}}" style="{{item.attrs.style + 'pointer-events: auto;user-select:none;'}}" data-href='{{item.attrs.href}}' hover-class="navigator-hover" hover-start-time="25" hover-stay-time="300" bindtap="tapEvent" bindlongpress="longpressEvent">
     <trees id="node" nodes="{{item.children}}" controls="{{controls}}" />
   </navigator>
   <!--继续递归-->
