--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -33,6 +33,7 @@
   }
   &-item {
     display: inline-block;
+    min-width: 30px;
     padding: 4px 10px;
     margin-left: 10px;
     font-size: 12px;
