feat: 小程序回调增加跳转方法，全面屏适配

--- a/src/plugin/components/FloatButton/index.less
+++ b/src/plugin/components/FloatButton/index.less
@@ -4,6 +4,10 @@
   top: 20px;
   right: 0px;
   transition: right .4s;
+  overflow: hidden;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  box-shadow: 0 2px 4px 0 rgba(23,23,26,0.1);
 
   .m-FloatButton_trigger {
     width: 24px;
@@ -24,7 +28,7 @@
     .m-FloatButton_action_item {
       display: flex;
       align-content: center;
-      padding: 5px 0px;
+      padding: 5px 2px;
       border-bottom: 0.5px solid #dcdcdc;
     }
     .m-FloatButton_action_item:last-child {
