--- a/src/plugin/components/Bot/m-group/index.less
+++ b/src/plugin/components/Bot/m-group/index.less
@@ -29,9 +29,12 @@
     align-items: center;
     justify-content: flex-end;
     .u-subTitle {
-      max-width: 6em;
+      box-sizing: border-box;
+      padding-left: 16px;
+      width: 115px;
       font-size: 12px;
       color: #333;
+      text-align: right;
       .fn_ellipsis();
     }
   }
