--- a/src/plugin/components/BotWorksheet/index.less
+++ b/src/plugin/components/BotWorksheet/index.less
@@ -1,4 +1,5 @@
 .u-form {
+  box-sizing: border-box;
   padding: 12px 16px 70px 16px;
   background-color: #f0f1f3;
   .u-title {
@@ -117,14 +118,14 @@
   }
 }
 
-.u-choose-wrap {
+.u-choose-wrap, .u-form-wrap {
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 60vh;
 }
 
-.u-choose {
+.u-choose, .u-form {
   flex: 1;
   width: 100%;
   overflow-y: scroll;
@@ -140,11 +141,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80%;
+  width: 90%;
   height: 40px;
   margin-top: 10px;
   margin-bottom: 40px;
   color: #fff;
   background: #337EFF;
-  border-radius: 5px;
+  border-radius: 2px;
 }
