feat: 增加个工单表单组件

--- a/src/plugin/components/BotWorksheet/index.less
+++ b/src/plugin/components/BotWorksheet/index.less
@@ -131,11 +131,6 @@
   overflow-y: scroll;
 }
 
-.u-choose-item {
-  padding: 10px 20px;
-  border-bottom: 1px solid #eee;
-}
-
 .u-confirm {
   flex: 0 0 auto;
   display: flex;
@@ -148,4 +143,15 @@
   color: #fff;
   background: #337EFF;
   border-radius: 2px;
+}
+
+.u-select {
+  position: relative;
+}
+
+.u-arrow {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
 }
