--- a/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
+++ b/src/plugin/components/Message/im-bot/TplBubbleNodeList/index.less
@@ -80,8 +80,6 @@
 
 .u-empty {
   width: 200px;
-  padding: 30px 0;
-  font-size: 14px;
-  color: #ccc;
-  text-align: center;
+  padding: 12px;
+  color: #333;
 }
