--- a/src/plugin/components/Message/im-file/index.less
+++ b/src/plugin/components/Message/im-file/index.less
@@ -12,7 +12,7 @@
 .@{prefix} {
   display: flex;
   align-items: center;
-  padding: 10px 12px;
+  padding: 10px 12px 20px 12px;
 
   .u-avatar {
     width: 40px;
