--- a/src/plugin/components/Message/im-img/index.less
+++ b/src/plugin/components/Message/im-img/index.less
@@ -9,7 +9,7 @@
 .@{prefix} {
   display: flex;
   align-items: flex-start;
-  padding: 10px 12px;
+  padding: 10px 12px 20px 12px;
   .u-avatar {
     width: 40px;
     height: 40px;
