--- a/src/plugin/components/Message/im-text/text.less
+++ b/src/plugin/components/Message/im-text/text.less
@@ -1,6 +1,6 @@
 .m-message {
     display: flex;
-    padding: 10px 12px;
+    padding: 10px 12px 20px 12px;
     .portrait_icon {
         display: inline-block;
         width: 21px;
