--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -128,3 +128,11 @@
   font-size: 16px;
   color: #ccc;
 }
+ 
+.u-read {
+  position: absolute;
+  right: 60px;
+  bottom: 3px;
+  font-size: 12px;
+  color: #999;
+}
